# PCSI

./: .gitignore  README.md
mpc-in-the-head/ligero/: Dockerfile  README  docker-compose.yml
mpc-in-the-head/ligero/results/: ligero_output.txt  output_raw.txt
mpc-in-the-head/ligero/scripts/: run_bench.sh
mpc-in-the-head/picnic/: Dockerfile  README.md  docker-compose.yml
mpc-in-the-head/picnic/results/: output_raw.txt  picnic_output.txt
mpc-in-the-head/picnic/scripts/: run_bench.sh
snark-benchmark/: .gitignore
snark-benchmark/circom/: README  package  package-lock.json
snark-benchmark/circom/circuits/: matrix_mul.circom  sha256_preimage.circom
snark-benchmark/circom/input/: matrix_input.json  sha256_input.json
snark-benchmark/circom/results/: bench_output.txt  matrix_mul_proof.json  matrix_mul_public.json  matrix_mul_vkey.json  sha256_preimage_proof.json  sha256_preimage_public.json  sha256_preimage_vkey.json
snark-benchmark/circom/scripts/: run_bench.sh
snark-benchmark/gnark/: Dockerfile  README  go.mod  main.go
snark-benchmark/gnark/results/: bench_output.txt
snark-benchmark/gnark/scripts/: run_bench
stark-benchmark/RISC-Zero/: README.md
stark-benchmark/RISC-Zero/matmul/: README.md
stark-benchmark/RISC-Zero/matmul_ar/: README.md
zkp-vole-benchmarks/: README.md  docker-compose.yml
zkp-vole-benchmarks/docker/: Dockerfile.emp-zk
zkp-vole-benchmarks/emp-zk/: CMakeLists.txt
zkp-vole-benchmarks/emp-zk/src/: matrix.cpp  sha256.cpp
zkp-vole-benchmarks/results/: matrix_mult.txt  sha256.txt
(+18 files in other folders)
